--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: RIF Identity docs
 description: >- # this means to ignore newlines until "baseurl:"
   RIF Identity is the identity and reputation layer within the RIF ecosystem.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/rif-identity-docs" # the subpath of your site, e.g. /blog
+url: "https://rsksmart.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: rif_os
 github_username:  rsksmart
 
